<resources>
    <string name="app_name">Goal Ranger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="or_login_with">or login with</string>
    <string name="login">Login</string>
    <string name="get_started">Let\'s Get You Started</string>
    <string name="phone_number">Phone Number</string>
    <string name="not_registered">Not Registered yet?</string>
    <string name="username">Username</string>
    <string name="create">Create</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_color">Color</string>
    <string name="action_sort">Sort</string>
    <string name="action_view">View</string>
    <string name="action_settings">Settings</string>
    <string name="registration_message">You are not registered yet. Use the registration button to complete your registration.</string>
    <string name="registration_failed">Your email or password is already in use</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="registration_button">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="no_text"> </string>
</resources>
