<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlack"
>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="@color/colorPrimary"
            android:textSize="38dp"
            app:fontFamily="@font/amarante"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="4dp"
            android:drawableStart="@drawable/ic_user_circle_black_24dp"
            android:drawablePadding="8dp"
            android:hint="@string/username"
            android:padding="8dp"
            android:background="@drawable/edit_text_outer_line"
            app:fontFamily="@font/amarante"
            android:textColorHint="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:textColor="@color/colorWhite"
            android:textSize="21sp"

            />

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:background="@drawable/edit_text_outer_line"
        android:id="@+id/email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:drawableStart="@drawable/ic_contact_mail_black_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:padding="8dp"
        app:fontFamily="@font/amarante"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:textColor="@color/colorWhite"
        android:textSize="21sp"

        />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="@font/amarante"
        android:layout_marginStart="21dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="21dp"
        android:drawableStart="@drawable/ic_contact_phone_black_24dp"
        android:drawableLeft="@drawable/ic_phone_black_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/phone_number"
android:background="@drawable/edit_text_outer_line"
        android:padding="8dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="21sp"

        />

    <android.support.v7.widget.AppCompatEditText
        android:textSize="21sp"
        android:inputType="textPassword"
        android:id="@+id/password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        app:fontFamily="@font/amarante"
        android:padding="8dp"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/edit_text_outer_line"
        android:textColor="@color/colorWhite"

        />

    <android.support.v7.widget.AppCompatEditText
        android:inputType="textPassword"
        android:id="@+id/confirm_password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="4dp"
        android:hint="@string/confirm_password"
        android:padding="8dp"
        app:fontFamily="@font/amarante"
        android:textColor="@color/colorWhite"
        android:textSize="21sp"
        android:background="@drawable/edit_text_outer_line"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_look"
            android:padding="8dp"
            android:text="@string/create"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:fontFamily="@font/amarante"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            />

    </LinearLayout>
</ScrollView>