<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlack"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
android:layout_gravity="center"

            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="Goal Stack"
                android:textColor="@color/colorPrimary"
                android:textSize="42sp"

                app:fontFamily="@font/amarante" />

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/email_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/edit_text_outer_line"
                android:padding="8dp"

                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingTop="4dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="21sp"
                app:fontFamily="@font/amarante" />

            <android.support.v7.widget.AppCompatEditText
                android:padding="8dp"
                android:id="@+id/password_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/edit_text_outer_line"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="4dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="21sp"
                app:fontFamily="@font/amarante" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="64dp"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="64dp"
                android:layout_marginRight="64dp"
                android:padding="8dp"

                android:background="@drawable/button_look"
                android:text="@string/login"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:fontFamily="@font/amarante"

                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/or_login_with"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:fontFamily="@font/archivo_black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button1"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/edit_text_socials"
                    android:src="@drawable/ic_facebook"


                    />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button2"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/edit_text_socials"
                    android:src="@drawable/ic_twitter" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/button3"
                    style="?android:buttonBarButtonStyle"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/edit_text_socials"
                    android:src="@drawable/ic_instagram" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/not_registered"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                app:fontFamily="@font/archivo_black" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/button_look"
                android:text="@string/create_account"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:fontFamily="@font/amarante"
                android:padding="8dp"

                />

        </LinearLayout>
</ScrollView>
